Add test component and update to TypeScript config

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -17,6 +17,9 @@ hero:
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+import HelloWorld from '@/components/HelloWorld.svelte';
+
+<HelloWorld />
 
 ## Next steps
 
