Update to homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,39 +1,28 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: "Éric St-Pierre"
+description: Optimizely Most Valuable Professional (Optimizely MVP), certified Content and Commerce Cloud developer, working as a solution architect at Yaksa.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  tagline: Optimizely Most Valuable Professional (Optimizely MVP), certified Content and Commerce Cloud developer, working as a solution architect at Yaksa.
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Articles
+      link: /posts/transitioning-to-optimizely-saas-core-enhancing-my-digital-presence/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
-import HelloWorld from '@/components/HelloWorld.svelte';
 
-<HelloWorld />
-
-## Next steps
+## Latest articles
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Transitioning to Optimizely SaaS Core: Enhancing My Digital Presence" icon="pencil">
+		[Read more](/posts/transitioning-to-optimizely-saas-core-enhancing-my-digital-presence/)
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Running Optimizely sites on macOS" icon="add-document">
+		[Read more](/posts/running-optimizely-sites-on-macos/)
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="How to fix database migration issues" icon="open-book">
+		[Read more](/posts/how-to-fix-database-migration-issues/)
 	</Card>
 </CardGrid>
