Remove date from homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -9,6 +9,7 @@ hero:
       link: /posts/transitioning-to-optimizely-saas-core-enhancing-my-digital-presence/
       icon: right-arrow
       variant: primary
+lastUpdated: false
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
