Update to homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Éric St-Pierre"
-description: Optimizely Most Valuable Professional (Optimizely MVP), certified Content and Commerce Cloud developer, working as a solution architect at Yaksa.
+description: Optimizely Most Valuable Professional (Optimizely MVP), certified Content and Commerce Cloud developer, working as a solution architect at Verndale.
 template: splash
 hero:
-  tagline: Optimizely Most Valuable Professional (Optimizely MVP), certified Content and Commerce Cloud developer, working as a solution architect at Yaksa.
+  tagline: Optimizely Most Valuable Professional (Optimizely MVP), certified Content and Commerce Cloud developer, working as a solution architect at Verndale.
   actions:
     - text: Articles
       link: /posts/transitioning-to-optimizely-saas-core-enhancing-my-digital-presence/
